--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/myomi/test/issues"
   },
-  "homepage": "https://github.com/myomi/test#readme"
+  "homepage": "https://github.com/myomi/test#readme",
+  "devDependencies": {
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
