node-sass, sass-loader の依存を追加

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/myomi/test#readme",
   "devDependencies": {
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
